# pycamofox

./: AGENT_RULES.md  ARCHITECTURE.md  BLUEPRINT.md  MEMORY.md  PRINCIPLES.md  README.md  ROADMAP.md  SKILL.md  pyproject.toml
.bak/: SKILL.md  pyproject.toml
.bak/agent-workspace/: agent_helpers.py
.bak/agent-workspace/domain-skills/douyin/: navigation.md
.bak/agent-workspace/domain-skills/xiaohongshu/: navigation.md
.bak/src/pycamofox/: __init__.py  __main__.py  cli.py  server.py
.claude/: ralph-loop.local.md
constitution/: anti_patterns.md  coding_rules.md  glossary.md  runtime_rules.md
docs/superpowers/plans/: 2026-05-10-browser-daemon-phase1.md
docs/superpowers/specs/: 2026-05-10-browser-daemon-design.md
scripts/: run_baidu_example.py
src/pycamofox/: __init__.py  __main__.py  cli.py
src/pycamofox/daemon/: __init__.py  browser.py  models.py  server.py  session.py
src/pycamofox/persistence/: __init__.py  cookies.py  session_state.py  storage.py
src/pycamofox/skills/: __init__.py  baidu.py  registry.py
src/pycamofox/stealth/: __init__.py  hooks.py
tests/: conftest.py
tests/integration/: test_daemon_flow.py  test_server.py
tests/unit/: test_browser.py  test_cookies.py  test_models.py  test_session.py  test_state.py  test_storage.py
