[project]
name = "pycamofox"
version = "1.0.0"
description = "camoufox browser CLI (REST API server + CLI client)"
requires-python = ">=3.8"
dependencies = [
    "camoufox>=0.4.11",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",  # for test client
]

[project.scripts]
pycamofox = "pycamofox.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"