[project]
name = "pycamofox"
version = "1.0.0"
description = "camoufox browser CLI (REST API server + CLI client)"
requires-python = ">=3.8"
dependencies = [
    "camoufox>=0.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
pycamofox = "pycamofox:cli.main"
pycamofox-server = "pycamofox:server.run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycamofox"]
